--- a/zubr.html
+++ b/zubr.html
@@ -37,7 +37,7 @@
 
         <a href="#ohrana">
 		<div class="spisoc">
-			<p>Численность и охрана</p>
+			<p>Ареал и истребление</p>
 		</div></a>
 
         <article id="vid">
