--- a/sea-cow.html
+++ b/sea-cow.html
@@ -40,7 +40,7 @@
 
 		<a href="#ohrana">
 			<div class="spisoc">
-				<p>Численность и охрана</p>
+				<p>Ареал и истребление</p>
 			</div>
 		</a>
 
